--- a/src/Components/checkout/checkout.css
+++ b/src/Components/checkout/checkout.css
@@ -2,6 +2,7 @@
   height: 84.7vh;
   display: flex;
   align-items: center;
+  font-family: "Bebas Neue", cursive;
 }
 .checkoutContainer,
 .thankYouContainer {
