--- a/src/Components/card/Card.css
+++ b/src/Components/card/Card.css
@@ -1,3 +1,11 @@
+.link{
+  all:unset;
+  font-family: "Bebas Neue", cursive;
+}
+.link:hover{
+  color:black
+}
+
 .card-img {
   width: 100%;
   height: 100%;
@@ -21,6 +29,7 @@
   box-shadow: 0px 4px 16px rgba(0, 0, 0,1);
   transition: all 0.3s ease-in-out;
   transform: scale(1.03);
+ 
 }
 
 .card-detail {
@@ -48,3 +57,4 @@
   flex-shrink: 0;
   max-width: 100%;
 }
+
