--- a/src/Components/cart/Cart.css
+++ b/src/Components/cart/Cart.css
@@ -4,18 +4,18 @@
 
 .mainCart {
   display: grid;
-  grid-template-columns: 40% 55%;
+  grid-template-columns: 60% 35%;
   column-gap: 2rem;
   padding: 2rem;
+  font-family: "Bebas Neue", cursive;
 }
 
 .cartDeleteAll,
 .cartResumeButtons {
   background-color: transparent;
   color: #000000;
-  font-family: "Antonio", sans-serif;
   font-size: 1.8rem;
-  border: solid 2px #000000;
+  border: solid 1.5px #000000;
   padding: 1rem;
   margin-top: 1rem;
   border-radius: 0.6rem;
@@ -25,8 +25,8 @@
 }
 
 .cartDeleteAll:hover {
-  color: #fb6161;
-  border: solid 2px #fb6161;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .cartResumeButtons:hover {
@@ -48,7 +48,9 @@
   padding: 4rem 2rem;
   border-radius: 0.6rem;
   box-shadow: 0px 5px 15px 0px rgba(74, 74, 74, 0.51);
-}
+  position: sticky;
+  top: 10rem;
+  }
 
 .titleResume,
 h1 {
@@ -71,7 +73,9 @@ h1 {
 .containerButtonsResume {
   width: 100%;
   display: flex;
+  justify-content: center;
   column-gap: 2rem;
+  
 }
 .emptyCartContainer {
   height: 80vh;
